--- a/app/views/partials/coord_plani/navbar.html
+++ b/app/views/partials/coord_plani/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="#">
+	<a class="navbar-brand" href="/coord_plani">
 		<img src="/images/index/CREDIUDO1.png" alt="" style="margin-top:-8px;">
 	</a>
 		
@@ -9,11 +9,11 @@
 
 	<div class="collapse navbar-collapse navegador" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-			    <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
+			<li class="nav-item" v-bind:class="{ active: inicio }">
+			    <a class="nav-link" href="/coord_plani">Inicio <span class="sr-only">(current)</span></a>
 			</li>
 			      
-			<li class="nav-item dropdown">
+			<li class="nav-item dropdown" v-bind:class="{ active: evaluacion }">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			    	Evaluación
 			    </a>
@@ -23,10 +23,6 @@
 					<a class="dropdown-item" href="/coord_plani/eval_encurso">En Curso</a>
 					<a class="dropdown-item" href="/coord_plani/eval_culminado">Culminada</a>
 				</div>
-			</li>
-			      
-			<li class="nav-item">
-			    <a class="nav-link disabled" href="#">Disabled</a>
 			</li>
 		</ul>
 
