--- a/app/views/coord_plani/evaluacion/eval_encurso.html
+++ b/app/views/coord_plani/evaluacion/eval_encurso.html
@@ -25,8 +25,8 @@
 
 	<div class="conatiner-fluid">
 		<div class="row justify-content-md-center">
-			<div class="col-md-10">
-				<div class="row">
+			<div class="col-md-12">
+				<div class="row" style="margin: 0">
 					<div class="col-md-12">
 						<!--=======MIGAS DE PAN=========-->
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 
-				<div class="row">
+				<div class="row" style="margin: 0">
 					<div class="col-md-3">
 						<div class="card">
 						  	<div class="card-header">
