--- a/app/views/coord_plani/index.html
+++ b/app/views/coord_plani/index.html
@@ -47,6 +47,7 @@
 						    		<p><b>Apellido: </b><%- Usuario.apellido %></p>
 						    		<p><b>Nucleo: </b><%- Usuario.nucleo.nombre %></p>
 						    		<p><b>Unidad: </b><%- Usuario.unidad.nombre %></p>
+						    		<p><b>Cargo: </b><%- Usuario.rol.nombre %></p>
 						    	</div>
 						  	</div>
 						</div>
@@ -90,10 +91,10 @@
 								  	<div class="card-body">
 								    	<div class="row">
 								    		<div class="col-md-10 col-sm-10">
-								    			<h4>Ultimas Evaluciones Planificadas</h4>	
+								    			<h4>Ultimas Evaluaciones Planificadas</h4>	
 								    		</div>
 								    		<div class="col-md-2 col-sm-2 text-right">
-								    			<a href=""><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-ellipsis-v" style="font-size: 15pt"></i></a>
+								    			<a href="/coord_plani/verTodas" data-toggle="tooltip" data-placement="right" title="Ver Todas"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-ellipsis-v" style="font-size: 15pt"></i></a>
 								    		</div>
 								    	</div>
 								    	<% if(Evaluaciones.length > 0) {%>
@@ -141,10 +142,10 @@
 										    			</div>
 										    		</div>
 										    		<div class="col-md-2 col-sm-3 text-center" style="border-left: 1px solid #E6DFDD">
-										    			<a href="/coord_plani/editEval/<%- Evaluaciones[i].id %>" class="btn btn-warning edit-eval">
+										    			<a href="/coord_plani/editEval/<%- Evaluaciones[i].id %>" class="btn btn-warning edit-eval" data-toggle="tooltip" data-placement="right" title="Editar Evaluación">
 													        <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-edit"></i>
 													    </a>
-										    			<a href="/coord_plani/deleteEval/<%- Evaluaciones[i].id %>" class="btn btn-danger" onclick="return comprobar(<%- Evaluaciones[i].fecha_i.getDate() %>, <%- Evaluaciones[i].fecha_i.getMonth() %>);"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-remove"></i></a>
+										    			<a href="/coord_plani/deleteEval/<%- Evaluaciones[i].id %>" class="btn btn-danger" data-toggle="tooltip" data-placement="right" title="Eliminar Evaluación" onclick="return comprobar(<%- Evaluaciones[i].fecha_i.getDate() %>, <%- Evaluaciones[i].fecha_i.getMonth() %>);"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-remove"></i></a>
 										    		</div>
 										    	</div>
 									    	<%}%>
