--- a/app/views/president/detalles/autoEval/index.html
+++ b/app/views/president/detalles/autoEval/index.html
@@ -22,7 +22,7 @@
 
 	<div class="container-fluid">
 		<div class="row justify-content-md-center">
-			<div class="col-md-10">
+			<div class="col-md-12">
 				<div class="row">
 					<div class="col-md-12">
 						<!--=======MIGAS DE PAN=========-->
@@ -86,7 +86,7 @@
 													<td><%- Factor[i].factor.nombre %></td>
 													<td style="padding: 5px">
 														<div class="progress">
-														  	<div class="progress-bar" role="progressbar" style="width: <%= calificacionFactor[i] * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%= calificacionFactor[i] %> Ptos</b></div>
+														  	<div class="progress-bar" role="progressbar" style="width: <%= calificacionFactor[i] * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%= calificacionFactor[i].toFixed(2) %> Ptos</b></div>
 														</div>
 													</td>	
 												</tr>
@@ -105,7 +105,7 @@
 												<td style="width: 40%"><h2>Calificación General: </h2></td>
 												<td>
 													<div class="progress">
-														<div class="progress-bar" role="progressbar" style="width: <%= dataEvaluacion.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= dataEvaluacion.calificacion %> Ptos</b></div>
+														<div class="progress-bar" role="progressbar" style="width: <%= dataEvaluacion.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= Math.trunc(dataEvaluacion.calificacion) %> Ptos</b></div>
 													</div>
 												</td>
 											</tr>
