--- a/app/views/president/detalles/personal/calificacion.html
+++ b/app/views/president/detalles/personal/calificacion.html
@@ -132,7 +132,7 @@
 																	<div class="col-lg-9 col-md-8 col-sm-9 text-center">
 																		<br><br>
 																		<div class="progress">
-																			<div class="progress-bar" role="progressbar" style="width: <%= autoEval.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= autoEval.calificacion %> Ptos</b></div>
+																			<div class="progress-bar" role="progressbar" style="width: <%= autoEval.calificacion * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%= Math.trunc(autoEval.calificacion) %> Ptos</b></div>
 																		</div>
 																	</div>					
 																</div>
@@ -159,7 +159,7 @@
 																		<div class="col-lg-9 col-md-8 col-sm-9 text-center">
 																			<br><br>
 																			<div class="progress">
-																				<div class="progress-bar" role="progressbar" style="width: <%= calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= calificacion %> Ptos</b></div>
+																				<div class="progress-bar" role="progressbar" style="width: <%= calificacion * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%= Math.trunc(calificacion)%> Ptos</b></div>
 																			</div>
 																		</div>					
 																	</div>
@@ -187,7 +187,7 @@
 																		<div class="col-lg-9 col-md-8 col-sm-9 text-center">
 																			<br><br>
 																			<div class="progress">
-																				<div class="progress-bar" role="progressbar" style="width: <%= calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= calificacion %> Ptos</b></div>
+																				<div class="progress-bar" role="progressbar" style="width: <%= calificacion * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= Math.trunc(calificacion)%> Ptos</b></div>
 																			</div>
 																		</div>					
 																	</div>
@@ -212,7 +212,7 @@
 																		<div class="col-lg-9 col-md-8 col-sm-9 text-center">
 																			<br><br>
 																			<div class="progress">
-																				<div class="progress-bar" role="progressbar" style="width: <%= evaldJefe.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= evaldJefe.calificacion %> Ptos</b></div>
+																				<div class="progress-bar" role="progressbar" style="width: <%= evaldJefe.calificacion * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%=  Math.trunc(evaldJefe.calificacion) %> Ptos</b></div>
 																			</div>
 																		</div>					
 																	</div>
@@ -250,7 +250,7 @@
 													<div class="col-lg-9 col-md-8 col-sm-9 text-center">
 														<br><br>
 														<div class="progress">
-															<div class="progress-bar" role="progressbar" style="width: <%= califiGeneral * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= califiGeneral %> Ptos</b></div>
+															<div class="progress-bar" role="progressbar" style="width: <%= califiGeneral * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= Math.trunc(califiGeneral) %> Ptos</b></div>
 														</div>
 													</div>	
 												</div>
