--- a/app/views/empleado/resultados/uno.html
+++ b/app/views/empleado/resultados/uno.html
@@ -181,6 +181,18 @@
 									</div>
 									<br>
 								</div>
+
+								<div class="col-md-12">
+									<div class="card">
+										<div class="card-body">
+											<div class="article border-bottom">
+												<h3>Recomendación</h3>
+											</div>
+											<textarea class="form-control" disabled rows="5"></textarea>
+										</div>
+									</div>
+									<br>
+								</div>
 							</div>
 							
 						</div>
