--- a/app/views/partials/empleado/navbar.html
+++ b/app/views/partials/empleado/navbar.html
@@ -20,14 +20,13 @@
 					        
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="/dashboard/comparacion">Comparar</a>
-					<a class="dropdown-item" href="#">Another action</a>
 					<div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="#">Something else here</a>
 				</div>
 			</li>
 			      
 			<li class="nav-item">
-			    <a class="nav-link disabled" href="#">Disabled</a>
+			    <a class="nav-link" href="/dashboard/resultadosTodos">Historial</a>
 			</li>
 		</ul>
 
