--- a/app/views/partials/coord_plani/navbar.html
+++ b/app/views/partials/coord_plani/navbar.html
@@ -24,6 +24,10 @@
 					<a class="dropdown-item" href="/coord_plani/eval_culminado">Culminada</a>
 				</div>
 			</li>
+
+			<li class="nav-item">
+			    <a class="nav-link" href="/coord_plani/actualizarDatos">Actualizar Datos <span class="sr-only">(current)</span></a>
+			</li>
 		</ul>
 
 		<ul class="navbar-nav navbar-right">
