--- a/app/views/coord_plani/perfil/actualizar.html
+++ b/app/views/coord_plani/perfil/actualizar.html
@@ -70,14 +70,39 @@
 								<div class="col-md-12">
 									<div class="card">
 										<div class="card-body">
-											<div class="row">
-												<div class="col-md-4">
-													foto
-												</div>
-												<div class="col-md-8">
-													info
-												</div>
+											<div class="article border-bottom">
+												<h3>Coordinador de Planificación</h3>	
 											</div>
+											<br>
+											<div class="article border-bottom">
+												<div class="text-center">
+													<img src="/images/img/user.png" class="rounded-circle img-fluid" alt="Cinque Terre" style="width: 20%">
+												</div>
+												<br>
+											</div>
+											<br>
+											<fieldset disabled>
+												<div class="form-group row">
+													<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
+													<div class="col-sm-9">
+														<input type="text" class="form-control form-control-sm">
+													</div>
+												</div>
+
+												<div class="form-group row">
+													<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
+													<div class="col-sm-9">
+													   	<input type="text" class="form-control form-control-sm">
+													</div>
+												</div>
+
+												<div class="form-group row">
+												    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
+												    <div class="col-sm-9">
+												    	<input type="text" class="form-control form-control-sm">
+												    </div>
+												</div>
+											</fieldset>
 										</div>
 									</div>
 								</div>
@@ -106,6 +131,19 @@
 	<script src="/js/main.js"></script>
 	<script src="/js/vue.js"></script>
 	<script src="/js/axios.js"></script>
-	
+	<script type="text/javascript">
+		new Vue({
+			el: '#main',
+			data: {
+				
+			}, 
+			created() {
+				
+			},
+			methods: {
+				
+			}
+		})
+	</script>
 </body>
 </html>
